<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:gravity="center"
    android:background="@android:color/white">

    <ImageView
    android:id="@+id/imageView3"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:scaleType="fitCenter"
    app:srcCompat="@drawable/ilustracion2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/login_bienvenido"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login_email"
        android:fontFamily="@font/nunito"
        app:boxStrokeColor="@color/orange"
        app:hintTextColor="@color/orange"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:fontFamily="@font/nunito"
        app:boxStrokeColor="@color/orange"
        app:hintTextColor="@color/orange"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_o"
        android:fontFamily="@font/nunito"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/buttonRegistrar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/login_registrate"
        android:textAllCaps="false"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/design_default_color_error"
        android:gravity="center"
        android:visibility="gone" />

</LinearLayout>